[package]
name = "lines"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"
bevy_embedded_assets = "0.8.0"
rand = "0.8.5"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
