[package]
name = "lines"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_embedded_assets = "0.8.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.11.2"
default-features = false
features = [
   "bevy_asset",  # Assets management
   "bevy_winit",  # Window management
   "bevy_sprite", # 2D (sprites) rendering
   "bevy_text",   # Text/font rendering
   "bevy_ui",     # UI toolkit

   # File formats:
   "png",  # PNG image format for simple 2D images
   "ktx2", # Preferred format for GPU textures
   "zstd", # ZSTD compression support in KTX2 files
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
