[package]
name = "lines"
version = "0.1.0"
authors = ["Stonum <lexxarsh@gmail.com>"]
edition = "2021"

[dependencies]
bevy_embedded_assets = "0.8.0"
rand = "0.8.5"
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"

[dependencies.bevy]
version = "0.11.2"
default-features = false
features = [
   "bevy_asset",  # Assets management
   "bevy_winit",  # Window management
   "bevy_sprite", # 2D (sprites) rendering
   "bevy_text",   # Text/font rendering
   "bevy_ui",     # UI toolkit
   "webgl2",      # Web: use WebGL2 instead of WebGPU

   # File formats:
   "png",  # PNG image format for simple 2D images
   "ktx2", # Preferred format for GPU textures
   "zstd", # ZSTD compression support in KTX2 files
]

[dependencies.web-sys]
version = "0.3.5"
features = ['KeyboardEvent', 'Storage', 'Window']

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 's'
lto = "thin"

[package.metadata.scripts]
run = "cargo run"
run_wasm = "trunk serve"
check = "cargo check"
release = "cargo build --release"
release_wasm = "trunk build --release"
